src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>No_BINGO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>created for application layout v2</description>
        <label>No Strategic Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_EOI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if EOIs were not submitted for this applicant or cohort</description>
        <label>No EOI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Fit_Assessment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Fit Assessment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_IP_Interview__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No IP Interview</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_ToC_submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No ToC submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Non_fishery_threats_to_ecosystems__c</fullName>
        <label>Non-fishery threats to ecosystems</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_fishers__c</fullName>
        <label>Number of fishers</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Old_Status__c</fullName>
        <description>Holds the original value of the case status picklist before v2 conversion.  this field not meant to be displayed or permanently kept.  this is a static value copied from the status picklist, so it will be out-of-date as updates are made.  meant only as an initial reference, and initially visible only to system admins.</description>
        <label>Old Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_of_fishers__c</fullName>
        <label>Organization of fishers</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Organization_size__c</fullName>
        <label>Organization size</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Threats_at_Site__c</fullName>
        <label>Other Threats at Site</label>
        <picklist>
            <picklistValues>
                <fullName>1 Residential &amp; Commercial Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.1 Housing &amp; Urban Areas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.2 Commercial &amp; Industrial Areas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.3 Tourism &amp; Recreation Areas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Agriculture &amp; Aquaculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.1 Annual &amp; Perennial Non-Timber Crops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.2 Wood &amp; Pulp Plantations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.3 Livestock Farming &amp; Ranching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.4 Marine &amp; Freshwater Aquaculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Energy Production &amp; Mining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.1 Oil &amp; Gas Drilling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.2 Mining &amp; Quarrying</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.3 Renewable Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Transportation &amp; Service Corridors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.1 Roads &amp; Railroads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.2 Utility &amp; Service Lines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.3 Shipping Lanes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.4 Flight Paths</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 Biological Resource Use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.1 Hunting &amp; Collecting Terr. Animals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.2 Gathering Terrestrial Plants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.3 Logging &amp; Wood Harvesting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.4 Fishing &amp; Harvesting Aquatic Res.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 Human Intrusions &amp; Disturbance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.1 Recreational Activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.2 War, Unrest &amp; Military Exercises</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.3 Work &amp; Other Activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 Natural System Modifications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.1 Fire &amp; Fire Suppression</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.2 Dams &amp; Water Management/Use</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Overall_BINGO_Score__c</fullName>
        <formula>Partnering_Skills__c  + Compliance_to_Agreements__c  + Potential_Impact_Theory_of_Change__c</formula>
        <label>Overall Strategic Partner Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overall_Recommendation__c</fullName>
        <label>Overall Reference</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P3Scoring_Campaign_Manager_Quality__c</fullName>
        <formula>( CM_candidate_is_available__c + Likelihood_to_stay_at_IP__c + Role_at_IP__c + Years_of_related_work_experience__c + Experience_with_audience_and_community__c + Site_accessibility__c + Reliability__c + Critical_thinking_skills__c + Verbal_Communication__c + Commitment_to_community_led_conservation__c + Technological_skills__c + Project_management_ability__c + Writing_skills__c + Ability_to_learn_new_concepts__c + Mindset_of_solutionology__c + SC2_CM_4_Educational_Background__c
+ Experience_with_BR_partners__c + Communication_work_experience__c + 
Monitoring_experience__c + CM_capacity_to_manage_fisheries__c ) / 20</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Manager Quality</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P3scoring_Implementing_Partner_Quality__c</fullName>
        <formula>(Financial_Support_for_Pride__c + Added_value_of_Rare__c + Project_Management__c + Organization_size__c + Relationship_with_site_and_community__c + Commitment_to_conservation__c + Ability_to_monitor_conservation_impact__c + Baseline_data__c + Decision_maker_support__c + Additional_staff_support__c + Influence_and_partnerships__c + Potential_ability_to_scale__c + Financial_ability_to_sustain_impact__c + Long_term_commitment_to_site__c + IP_capacity_to_manage_fisheries__c ) / 15</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementing Partner Quality</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner_Employees__c</fullName>
        <formula>Account.NumberOfEmployees</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner_Revenue__c</fullName>
        <formula>Account.AnnualRevenue</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Partner_Type__c</fullName>
        <formula>TEXT(Account.Segment__c)</formula>
        <label>Partner Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partnering_Skills__c</fullName>
        <label>Partnering Skills</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partnership_experience_with_BINGO__c</fullName>
        <label>Partnership experience with BINGO</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Per_household_farmland_size__c</fullName>
        <label>Per household farmland size</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Physical_violence_security_risk__c</fullName>
        <label>Physical violence security risk</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Political_Leadership__c</fullName>
        <label>Political Leadership</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Political_risk_corruption__c</fullName>
        <label>Political risk/corruption</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Potential_BINGO_partners_exist__c</fullName>
        <label>Potential BINGO partners exist</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Potential_Impact_Theory_of_Change__c</fullName>
        <label>Potential Impact/Theory of Change</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Potential_ability_to_scale__c</fullName>
        <label>Potential ability to scale</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Potential_for_Sustainability__c</fullName>
        <label>Potential for Sustainability</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Potential_for_alternative_livelihoods__c</fullName>
        <label>Potential for alternative livelihoods</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pre_Application_Score__c</fullName>
        <description>On Contact Record Page</description>
        <label>Pre-Application Score (1-5)</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Premium_agriculture_product_market__c</fullName>
        <label>Premium agriculture market access</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Products_and_market_potential__c</fullName>
        <label>Products and market potential</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Management__c</fullName>
        <label>Project Management</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Quality__c</fullName>
        <label>Project Quality</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please connect this application to the relevant project</inlineHelpText>
        <label>Project</label>
        <referenceTo>Projects__c</referenceTo>
        <relationshipLabel>Pride Applications</relationshipLabel>
        <relationshipName>LinkedProject</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_management_ability__c</fullName>
        <label>Project management ability</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prospective_CM_Employed_by_LAP__c</fullName>
        <label>Prospective CM Employed by IP?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prospective_CM_Identified__c</fullName>
        <label>Prospective CM Identified?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prospective_FF_Employed_by_LAP__c</fullName>
        <label>Prospective FF Employed by IP?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prospective_FF_Identified__c</fullName>
        <label>Prospective FF Identified?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proximity_to_watershed__c</fullName>
        <label>Proximity to watershed</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rare_Funding_Secured__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rare Funding Secured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>created for application layout v2.  Signifies the region of the training.  Intended to work in conjunction with the cohort &amp; start date fields to ensure the right data can be captured for reporting.</description>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Bogor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PEP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WIO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Regional_Recommendation__c</fullName>
        <description>created for application layout v2.  Deferred means deferring the decision of whether to accept, not accepted but deferred admittance until a later cohort.</description>
        <label>Regional Recommendation</label>
        <picklist>
            <picklistValues>
                <fullName>Recommended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Relationship_with_site_and_community__c</fullName>
        <label>Relationship with site and community</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reliability__c</fullName>
        <label>Reliability</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Resource_leverage_capacity__c</fullName>
        <label>Resource leverage capacity</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Role_at_IP__c</fullName>
        <label>Role at IP</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC2_B5_CM_Quality__c</fullName>
        <formula>( SC2_CM_1_Working_Relationship__c + SC2_CM_3_Work_Experience__c + SC2_CM_5_Communication__c + SC2_CM_7_Project_Management__c + SC2_CM_9_Personal_Motivation__c + SC2_CM_2_Site_Understanding__c + SC2_CM_4_Educational_Background__c + SC2_CM_6_Critical_Thinking__c + SC2_CM_8_Leadership__c)  / 9</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Manager Quality</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC2_BC_1_Target_Audience__c</fullName>
        <inlineHelpText>Target audience</inlineHelpText>
        <label>Target Audience</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC2_BC_2_Behavior_Change__c</fullName>
        <inlineHelpText>Feasability of behavioral change</inlineHelpText>
        <label>Behavior Change</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC2_BC_3_Threat_Reduction__c</fullName>
        <inlineHelpText>Link to threat reduction</inlineHelpText>
        <label>Threat Reduction</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC2_BC_4_Barrier_Removal__c</fullName>
        <inlineHelpText>Feasability of barrier removal</inlineHelpText>
        <label>Barrier Removal</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC2_BC_5_Measurement__c</fullName>
        <inlineHelpText>Measurement of Behavior Change</inlineHelpText>
        <label>Measurement</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC2_BC_average__c</fullName>
        <formula>(SC2_BC_1_Target_Audience__c + SC2_BC_2_Behavior_Change__c + SC2_BC_3_Threat_Reduction__c + SC2_BC_4_Barrier_Removal__c + SC2_BC_5_Measurement__c ) / 5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Behavior Change Likelihood</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC2_CI_1_Biodiversity_Result__c</fullName>
        <inlineHelpText>Biodiversity result</inlineHelpText>
        <label>Biodiversity Result</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC2_CI_2_Threat_Reduction__c</fullName>
        <inlineHelpText>Threat reduction</inlineHelpText>
        <label>Threat Reduction</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC2_CI_3_Change_Theory__c</fullName>
        <inlineHelpText>Theory of change logic</inlineHelpText>
        <label>Change Theory</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC2_CI_4_Campaign_Sustainability__c</fullName>
        <inlineHelpText>Campaign sustainabilty</inlineHelpText>
        <label>Campaign Sustainability</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC2_CI_5_Partner_Reliance__c</fullName>
        <inlineHelpText>Reliance on other partners to achive impact</inlineHelpText>
        <label>Partner Reliance</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC2_CI_6_Monitoring_Measurement__c</fullName>
        <inlineHelpText>Monitoring and measuring</inlineHelpText>
        <label>Monitoring and Measurement</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC2_CI_average__c</fullName>
        <formula>(SC2_CI_1_Biodiversity_Result__c + SC2_CI_2_Threat_Reduction__c + SC2_CI_3_Change_Theory__c + SC2_CI_4_Campaign_Sustainability__c + SC2_CI_5_Partner_Reliance__c + SC2_CI_6_Monitoring_Measurement__c ) / 6</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conservation Impact Potential</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC2_CM_1_Working_Relationship__c</fullName>
        <inlineHelpText>Working relationship with lead agency</inlineHelpText>
        <label>Working Relationship</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC2_CM_2_Site_Understanding__c</fullName>
        <inlineHelpText>Understanding of site</inlineHelpText>
        <label>Site Understanding</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC2_CM_3_Work_Experience__c</fullName>
        <inlineHelpText>Relevant work experience</inlineHelpText>
        <label>Work Experience</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC2_CM_4_Educational_Background__c</fullName>
        <inlineHelpText>Educational background</inlineHelpText>
        <label>Educational Background</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC2_CM_5_Communication__c</fullName>
        <inlineHelpText>Communication skills</inlineHelpText>
        <label>Communication</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC2_CM_6_Critical_Thinking__c</fullName>
        <inlineHelpText>Critical thinking skills</inlineHelpText>
        <label>Critical Thinking</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC2_CM_7_Project_Management__c</fullName>
        <inlineHelpText>Project management skills</inlineHelpText>
        <label>Project Management</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC2_CM_8_Leadership__c</fullName>
        <inlineHelpText>Leadership skills</inlineHelpText>
        <label>Leadership</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC2_CM_9_Personal_Motivation__c</fullName>
        <inlineHelpText>Personal motivation</inlineHelpText>
        <label>Personal Motivation</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC2_CM_average__c</fullName>
        <formula>(  CM_candidate_is_available__c  +  Likelihood_to_stay_at_IP__c  +  Role_at_IP__c  +  Years_of_related_work_experience__c  +  Experience_with_audience_and_community__c  +  Site_accessibility__c  +  Reliability__c  +   Critical_thinking_skills__c  +  Verbal_Communication__c  +  Commitment_to_community_led_conservation__c  +  Technological_skills__c  +   Project_management_ability__c  +  Writing_skills__c  +  Ability_to_learn_new_concepts__c  +  Mindset_of_solutionology__c  +   SC2_CM_4_Educational_Background__c 
  +  Experience_with_BR_partners__c  +  Communication_work_experience__c  +  Monitoring_experience__c  )  / 19</formula>
        <label>Campaign Manager Quality</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC2_LA_1_Conservation_Strategy__c</fullName>
        <inlineHelpText>Long-term site conservation strategy</inlineHelpText>
        <label>Conservation Strategy</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC2_LA_2_Financial_Capacity__c</fullName>
        <inlineHelpText>Financial capacity to support long-term threat reduction</inlineHelpText>
        <label>Financial Capacity</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC2_LA_3_Buy_in__c</fullName>
        <inlineHelpText>Lead agency “buy-in” to the Pride model</inlineHelpText>
        <label>Buy-in</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC2_LA_4_Resource_Commitment__c</fullName>
        <inlineHelpText>Willingness to commit resources (CM, BR, monitoring)</inlineHelpText>
        <label>Resource Commitment</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC2_LA_5_Community_Commitment__c</fullName>
        <inlineHelpText>Commitment to community involvement</inlineHelpText>
        <label>Community Commitment</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC2_LA_6_Project_Implementation__c</fullName>
        <inlineHelpText>Project implementation track record</inlineHelpText>
        <label>Project Implementation</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC2_LA_7_Team_Support__c</fullName>
        <inlineHelpText>Support for Pride project</inlineHelpText>
        <label>Team Support</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC2_LA_average__c</fullName>
        <formula>(SC2_LA_1_Conservation_Strategy__c + SC2_LA_2_Financial_Capacity__c + SC2_LA_3_Buy_in__c + SC2_LA_4_Resource_Commitment__c + SC2_LA_5_Community_Commitment__c + SC2_LA_6_Project_Implementation__c +  SC2_LA_7_Team_Support__c ) / 7</formula>
        <label>Implementing Partner Quality</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC2_SP_1_Partnering__c</fullName>
        <inlineHelpText>Partnering skills</inlineHelpText>
        <label>Partnering</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC2_SP_2_Agreement_Compliance__c</fullName>
        <description>test</description>
        <inlineHelpText>Compliance to agreements</inlineHelpText>
        <label>Agreement Compliance</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC2_SP_3_Strategy_Alignment__c</fullName>
        <inlineHelpText>Theory of change alignment with regional / global strategy</inlineHelpText>
        <label>Strategy Alignment</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC2_SP_average__c</fullName>
        <formula>(SC2_SP_1_Partnering__c + SC2_SP_2_Agreement_Compliance__c + SC2_SP_3_Strategy_Alignment__c ) / 3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Strategic Partner Quality</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC2_total_score_percent__c</fullName>
        <formula>IF( No_BINGO__c , 
( (SC2_LA_average__c *  0.3) + ( SC2_CM_average__c * 0.3) + (SC2_BC_average__c * 0.2) + (SC2_CI_average__c * 0.2) ) / 5
, 
( (SC2_LA_average__c *  0.25) + ( SC2_CM_average__c * 0.25) + (SC2_BC_average__c * 0.2) + (SC2_CI_average__c * 0.2) + (SC2_SP_average__c * 0.1) ) / 5
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Applicant Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Second_Interview_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a conversation on Strategy which occurs after Part 2 of the Application is submitted. The Country Director and Key Contact at Lead Agency discuss how the campaign fits in with larger strategies.  They fill out 3rd part of Application together. This is also the time for the Campaign Manager interview.</description>
        <label>Strategy Conversation Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Site_Assessor__c</fullName>
        <description>Rare staff assessing site</description>
        <inlineHelpText>Rare staff assessing site</inlineHelpText>
        <label>Site Assessor</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Comments__c</fullName>
        <label>Site Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Site_Experience__c</fullName>
        <label>Site Experience</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Site_Quality__c</fullName>
        <label>Site Quality</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Site_Score__c</fullName>
        <label>Site Score</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Site_Visit_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if site was visited prior to selection</description>
        <inlineHelpText>Check if site was visited prior to selection</inlineHelpText>
        <label>Site Visit Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Site_accessibility__c</fullName>
        <label>Site accessibility</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Size_of_NTZ_marine_reserve__c</fullName>
        <label>Size of NTZ/marine reserve</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Skills_to_organize_and_present_fish_data__c</fullName>
        <label>Skills to organize and present fish data</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Skillset_implementing_TURFs__c</fullName>
        <label>Skillset implementing TURFs</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Social_capacity_for_conservation_efforts__c</fullName>
        <label>Social capacity for conservation efforts</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Species_changes_in_catch__c</fullName>
        <label>Species changes in catch</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Statement_of_Intent_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>created for application layout v2.</description>
        <label>Statement of Commitment Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_RO__c</fullName>
        <formula>TEXT( Status )</formula>
        <inlineHelpText>Read Only Status - change using Workflow</inlineHelpText>
        <label>Status (RO)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strategic_value_of_the_site__c</fullName>
        <label>Strategic value of the site</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Strong_farmer_fellow_exists__c</fullName>
        <label>Strong farmer fellow exists</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRSBachelor_s_degree_in_science_or_equiv__c</fullName>
        <label>Bachelor&apos;s degree in science or equiv.</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
</CustomObject>